[project]
name = "monolith"
version = "0.1.0"
description = ""
authors = [
    {name = "StoyanChorbov",email = "stoyan.chorbov@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.42.34,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
