[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ivan Obreshkov <ivanobreshkov12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.115.0"
aiosmtplib = "^3.0.2"
uvicorn = "^0.31.0"
structlog = "^24.4.0"
result = "^0.17.0"
pydantic = {extras = ["email"], version = "^2.9.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
start = "src.server.app_entrypoint:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
